# analysis-platform

./: .gitignore  2025-CSI-PPT-Template.pptx  CHANGELOG-2026-02-21.md  CLAUDE.md  HANDOFF.md  Makefile  README.md  RPE_Sales_Deck.pptx  TECHNICAL.md  config-log  dashboard.bat  file_name  list_tran_dirs.bat  pyproject.toml  run.bat  run_batch.bat  setup.bat  verify_spines.py
.github/workflows/: ci.yml
config/: benchmarks.json  platform.yaml
docs/: slide_catalog.py  slide_catalog.xlsx  unified-client-registry-transition.md
docs/integration/: streamlit-platform-ui.md
docs/reviews/: 2026-02-25-analysis-platform-review.md
plans/: DEPLOYMENT-CHECKLIST-RPE-REBRAND.md  chore-consolidate-moving-parts.md  chore-unified-consolidation.md  feat-improve-analysis-output-quality.md  feat-objection-counter-analytics.md  feat-platform-enhancement-roadmap.md  feat-rebrand-rpe-and-platform-improvements.md  feat-reg-e-enhancement.md  feat-streamlit-platform-ui.md  fix-chart-formatting-spines-positioning.md  fix-output-quality-and-performance.md  refactor-unified-deck-consolidation.md
plans/archive/: feat-ars-pipeline-roadmap.md  feat-ars-pipeline-v2-revamp.md  feat-dctr-section-overhaul.md  feat-efficacy-stories-and-threads.md  feat-ics-product-review.md  feat-market-impact-visuals.md  feat-selectable-analysis-types.md  feat-team-reporting-platform.md  fix-mailer-summary-slide-refinements.md  fix-output-quality-and-performance.md  fix-txn-pipeline-broken-wiring.md  refactor-comprehensive-consolidation.md  review-impact-analysis.md  strategic-insights-analysis.md
scripts/: cleanup_and_organize.bat  sync_ars.bat  sync_ars.sh  sync_ics.bat  sync_ics.sh
tests/: conftest.py
tests/ars/: conftest.py  test_ars_config.py  test_attrition.py  test_batch.py  test_chart_style.py  test_cli.py  test_dctr.py  test_deck_builder.py  test_deck_builder_layouts.py  test_excel_output.py  test_headlines.py  test_helpers.py  test_mailer_common.py  test_mailer_impact.py  test_mailer_insights.py  test_mailer_response.py  test_notes.py  test_pipeline_functions.py  test_reg_e.py  test_runner.py  test_sales_deck.py  test_smoke.py  test_value.py
tests/e2e_data/: 1200_Test CU_2026.02.xlsx  8888_transactions.csv  9999_ICS_2026.01.xlsx  (+1 more)
(+137 files in other folders)
